[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
resolver = "3"

members = [
    "core",
    "programs",
    "programs/baby_aggregation_program",
    "programs/baby_aggregation_program_script",
    "programs/baby_consensus_program",
    "programs/baby_consensus_program_script",
    "programs/baby_membership_program",
    "programs/baby_membership_program_script",
]

[workspace.dependencies]
alloy-sol-types = "0.8.25"
anyhow = "1.0.95"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
async-channel = "2.3.1"
bincode = "2.0.1"
bitcoin = "0.32.5"
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin-script-stack = { git = "https://github.com/BitVM/rust-bitcoin-script-stack" }
bitcoincore-rpc = "0.19.0"
bitcoincore-rpc-json = "0.19.0"
bitflags = "2.9.0"
bitvm = { git = "https://github.com/BitVM/BitVM" }
clap = "4.5.34"
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }
directories = "6.0.0"
futures = "0.3"
hex = "0.4.3"
jsonrpsee = "0.24.9"
ibc-core-commitment-types = { version = "0.57.0", default-features = false }
ibc-core-host-types = { version = "0.57.0", default-features = false }
ibc-proto = { version = "0.52.0", default-features = false }
parking_lot = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = { version = "1.0", default-features = false }
sha2 = "0.10.4"
sp1-build = "4.2.0"
sp1-core-executor = "4.2.0"
sp1-derive = "4.2.0"
sp1-helper = "4.2.0"
sp1-prover = "4.2.0"
sp1-sdk = "4.2.0"
sp1-zkvm = "4.2.0"
sp1-verifier = "4.2.0"
strum = "0.26"
tempfile = "3.18.0"
tendermint-light-client-verifier = { version = "0.40", default-features = false }
thiserror = "2.0.12"
tokio = "1.44.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

zk-light-client-core = { path = "./core" }

[profile.dev]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
